Formatear código automáticamente con Prettier

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,8 +18,8 @@ const metadata = {
         href: '/tramites',
         icon: 'tabler:file-description',
       },
-      { 
-        text: 'Calculadora', 
+      {
+        text: 'Calculadora',
         href: '/calculadora',
         icon: 'tabler:calculator',
       },
@@ -30,7 +30,7 @@ const metadata = {
     </Fragment>
 
     <Fragment slot="subtitle">
-      Sucursal Provincial Santiago de Cuba. <br/>
+      Sucursal Provincial Santiago de Cuba. <br />
       Ahorramos trabajo, multiplicamos su tiempo.
     </Fragment>
   </Hero>
@@ -61,11 +61,9 @@ const metadata = {
       },
       {
         title: 'Tasas de Cambio',
-        description:
-          'Consulte las tasas de cambio de monedas extranjeras actualizadas al día.',
+        description: 'Consulte las tasas de cambio de monedas extranjeras actualizadas al día.',
         icon: 'tabler:currency-dollar',
       },
     ]}
   />
-
-  </Layout>
+</Layout>
