Renombrado de Categorías a Servicios y añadido Otros Servicios

--- a/src/pages/servicios/[id].astro
+++ b/src/pages/servicios/[id].astro
@@ -6,9 +6,14 @@ import Steps from '~/components/widgets/Steps.astro';
 
 export function getStaticPaths() {
   return [
+    // Principales
     { params: { id: 'ahorro' } },
     { params: { id: 'creditos' } },
     { params: { id: 'tarjetas' } },
+    // Otros servicios
+    { params: { id: 'cheques' } },
+    { params: { id: 'cajas-seguridad' } },
+    { params: { id: 'banca-distancia' } },
   ];
 }
 
